idea/testData/multiplatform/diamondActualOnOnePath/bottom/bottom.kt
package sample

fun <!LINE_MARKER!>main<!>() {
    ActualizedInLeft()
    ActualizedInRight()
}